# Nampower-rosetta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build.nampower/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build.nampower/nampower/: cmake_install.cmake
cmake-dllonly/: CMakeLists.txt
licenses/: NOTICE
nampower/: CMakeLists.txt  helper.cpp  main.cpp
